load(":toolchains.bzl", "my_toolchain_impl", "my_rule")

toolchain_type(
    name = "my_type",
)

my_toolchain_impl(
    name = "my_toolchain_impl",
)

toolchain(
    name = "my_toolchain",
    toolchain = ":my_toolchain_impl",
    toolchain_type = "//:my_type"
)

my_rule(
    name = "my_target",
    toolchains = [":my_toolchain"],
)
